--- a/app/views/nashville/experience.html.erb
+++ b/app/views/nashville/experience.html.erb
@@ -10,7 +10,7 @@
 				<h1 class="left-title">The Experience</h1>
 					
 				<p><%= @store.theexperience.html_safe %></p>
-
+				<p class="trousseau">Trous·seau: the clothes, household linen, and other belongings collected by a bride for her marriage.</p>
 			</div>
 
 			<div class="col-xs-12 col-md-6">
