--- a/app/views/nashville/index.html.erb
+++ b/app/views/nashville/index.html.erb
@@ -10,6 +10,7 @@
 			<div class="col-xs-12 col-md-6 location-info">
 				<h3 class="city-title"><%= @store.name %></h3>
 				<p><%= @store.summary.html_safe %></p>
+				<p class="trousseau">Trous·seau: the clothes, household linen, and other belongings collected by a bride for her marriage.</p>
 			</div>
 		</div>
 	</div>
