--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -490,6 +490,9 @@ a.city-title:hover {
 .trousseau {
 	color: $lightblue;
 	font-weight: bold;
+	border: 1px solid $grey;
+	padding: 2em !important;
+	margin-top: 3em;
 }
 
 .hidden { display: none; }
