--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -492,7 +492,7 @@ a.city-title:hover {
 	font-weight: bold;
 	border: 1px solid $grey;
 	padding: 2em !important;
-	margin-top: 3em;
+	text-align: center;
 }
 
 .hidden { display: none; }
