--- a/app/views/nashville/experience.html.erb
+++ b/app/views/nashville/experience.html.erb
@@ -6,11 +6,8 @@
 		<div class="col-xs-12 experience">
 
 			<div class="col-xs-12 col-md-6">
-
 				<h1 class="left-title">The Experience</h1>
-					
 				<p><%= @store.theexperience.html_safe %></p>
-				<p class="trousseau">Trous·seau: the clothes, household linen, and other belongings collected by a bride for her marriage.</p>
 			</div>
 
 			<div class="col-xs-12 col-md-6">
@@ -20,6 +17,13 @@
 		</div>
 	</div>
 
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="col-xs-12">
+				<p class="trousseau">Trous·seau: the clothes, household linen, and other belongings collected by a bride for her marriage.</p>
+			</div>
+		</div>
+	</div>
 
 	<div class="col-xs-12">
 		<div class="col-xs-12">
