--- a/app/views/nashville/experience.html.erb
+++ b/app/views/nashville/experience.html.erb
@@ -25,12 +25,14 @@
 		</div>
 	</div>
 
-	<div class="col-xs-12">
+	<div class="row">
 		<div class="col-xs-12">
-			<div class="col-xs-12 appointment-info">
-				<h3>All dresses are shown by appointment</h3>
-				<h3>Book today so we can introduce ourselves</h3>
-				<a href="<%= @store.url %>" target="_blank" class="btn">Book an appointment</a>
+			<div class="col-xs-12">
+				<div class="col-xs-12 appointment-info">
+					<h3>All dresses are shown by appointment</h3>
+					<h3>Book today so we can introduce ourselves</h3>
+					<a href="<%= @store.url %>" target="_blank" class="btn">Book an appointment</a>
+				</div>
 			</div>
 		</div>
 	</div>
