--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -495,6 +495,10 @@ a.city-title:hover {
 	text-align: center;
 }
 
+.img-thumbnail {
+	max-width: 100px;
+}
+
 .hidden { display: none; }
 
 .contact-form {
