--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -44,12 +44,22 @@
 
   <p>
     <strong>The Experience:</strong>
-    <%= @store.theexperience %>
+    <%# @store.theexperience %>
   </p>
 
   <p>
-    <strong>Picture:</strong>
-    <%= @store.picture %>
+    <strong>Shop Image:</strong>
+    <%= image_tag(@store.shop_image.url, :class => "img-thumbnail") %>
+  </p>
+
+  <p>
+    <strong>Gallery Image:</strong>
+    <%= image_tag(@store.gallery_image.url, :class => "img-thumbnail") %>
+  </p>
+
+  <p>
+    <strong>The Experience Image:</strong>
+    <%= image_tag(@store.the_experience_image.url, :class => "img-thumbnail") %>
   </p>
 
   <%= link_to 'Edit', edit_store_path(@store) %> |
