--- a/app/views/tupelo/experience.html.erb
+++ b/app/views/tupelo/experience.html.erb
@@ -7,11 +7,11 @@
 
 			<div class="col-xs-12 col-md-6">
 				<h1 class="left-title">The Experience</h1>
-				<p><%= @store.theexperience.html_safe %></p>
+				<p><%= @store.the_experience.html_safe %></p>
 			</div>
 
 			<div class="col-xs-12 col-md-6">
-				<%= image_tag("tupelo_experience.png", :alt => "Tupelo, MS", :class => "experience-img") %>
+				<%= image_tag(@store.the_experience_image, :alt => "Tupelo, MS", :class => "experience-img") %>
 			</div>
 
 		</div>
