--- a/app/views/nashville/index.html.erb
+++ b/app/views/nashville/index.html.erb
@@ -5,7 +5,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="col-xs-12 col-md-6">
-				<%= image_tag("nashville_shop.png", :alt => "Nashville, TN", :class => "location-img") %>
+				<%= image_tag(@store.shop_image, :alt => "Nashville, TN", :class => "location-img") %>
 			</div>
 			<div class="col-xs-12 col-md-6 location-info">
 				<h3 class="city-title"><%= @store.name %></h3>
@@ -38,7 +38,7 @@
 		<div class="col-xs-12">
 			<%= link_to(nashville_experience_path) do %>
 				<div class="col-xs-12 col-sm-6 experience">
-					<%= image_tag("nashville_experience.png", :alt => "Nashville, TN", :class => "location-img") %>
+					<%= image_tag(@store.the_experience_image, :alt => "Nashville, TN", :class => "location-img") %>
 					<div class="label-holder">
 						<h2>The Experience</h2>
 						<span class="arrow-a">
@@ -50,7 +50,7 @@
 
 			<%= link_to(nashville_explore_path) do %>
 				<div class="col-xs-12 col-sm-6 dresses">
-					<%= image_tag("nashville_gallery.png", :alt => "Nashville, TN", :class => "location-img") %>
+					<%= image_tag(@store.gallery_image, :alt => "Nashville, TN", :class => "location-img") %>
 					<div class="label-holder">
 						<h2>Explore Dresses</h2>
 						<span class="arrow-a">
