--- a/app/views/whitefish/experience.html.erb
+++ b/app/views/whitefish/experience.html.erb
@@ -6,15 +6,12 @@
 		<div class="col-xs-12 experience">
 
 			<div class="col-xs-12 col-md-6">
-
 				<h1 class="left-title">The Experience</h1>
-					
-				<p><%= @store.theexperience.html_safe %></p>
-
+				<p><%= @store.the_experience.html_safe %></p>
 			</div>
 
 			<div class="col-xs-12 col-md-6">
-				<%= image_tag("whitefish_experience.png", :alt => "Whitefish, MT", :class => "experience-img") %>
+				<%= image_tag(@store.the_experience_image, :alt => "Whitefish, MT", :class => "experience-img") %>
 			</div>
 
 		</div>
