--- a/app/views/whitefish/index.html.erb
+++ b/app/views/whitefish/index.html.erb
@@ -5,7 +5,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="col-xs-12 col-md-6">
-				<%= image_tag("whitefish_shop.png", :alt => "Whitefish, MT", :class => "location-img") %>
+				<%= image_tag(@store.shop_image, :alt => "Whitefish, MT", :class => "location-img") %>
 			</div>
 			<div class="col-xs-12 col-md-6 location-info">
 				<h3 class="city-title"><%= @store.name %></h3>
@@ -30,7 +30,7 @@
 		<div class="col-xs-12">
 			<%= link_to(whitefish_experience_path) do %>
 				<div class="col-xs-12 col-sm-6 experience">
-					<%= image_tag("whitefish_experience.png", :alt => "Whitefish, MT", :class => "location-img") %>
+					<%= image_tag(@store.the_experience_image, :alt => "Whitefish, MT", :class => "location-img") %>
 					<div class="label-holder">
 						<h2>The Experience</h2>
 						<span class="arrow-a">
@@ -42,7 +42,7 @@
 
 			<%= link_to(whitefish_explore_path) do %>
 				<div class="col-xs-12 col-sm-6 dresses">
-					<%= image_tag("whitefish_gallery.png", :alt => "Whitefish, MT", :class => "location-img") %>
+					<%= image_tag(@store.gallery_image, :alt => "Whitefish, MT", :class => "location-img") %>
 					<div class="label-holder">
 						<h2>Explore Dresses</h2>
 						<span class="arrow-a">
