changed email addresses for contact pages

--- a/app/views/nashville/contact.html.erb
+++ b/app/views/nashville/contact.html.erb
@@ -15,7 +15,7 @@
         <%= f.text_area :message, :as => :text, :required => true, label_class: "label" %>
         <div class= "hidden">
           <%= f.text_field :nickname, :hint => 'Leave this field blank!' %>
-          <%= f.text_field :recipient, :value => 'heather.allaman@gmail.com' %>
+          <%= f.text_field :recipient, :value => 'tammy@willowbride.com' %>
 
         </div>
         <div class="col-xs-9 pull-right submit-holder">
