hardcode images, for now

--- a/app/views/whitefish/experience.html.erb
+++ b/app/views/whitefish/experience.html.erb
@@ -11,7 +11,8 @@
 			</div>
 
 			<div class="col-xs-12 col-md-6">
-				<%= image_tag(@store.the_experience_image, :alt => "Whitefish, MT", :class => "experience-img") %>
+				<%# image_tag(@store.the_experience_image, :alt => "Whitefish, MT", :class => "experience-img") %>
+				<%= image_tag('whitefish_experience.png', :alt => "Whitefish, MT", :class => "location-img") %>
 			</div>
 
 		</div>
