--- a/app/views/nashville/experience.html.erb
+++ b/app/views/nashville/experience.html.erb
@@ -11,7 +11,8 @@
 			</div>
 
 			<div class="col-xs-12 col-md-6">
-				<%= image_tag(@store.the_experience_image, :alt => "Nashville, TN", :class => "experience-img") %>
+				<%# image_tag(@store.the_experience_image, :alt => "Nashville, TN", :class => "experience-img") %>
+				<%= image_tag("nashville_experience.png", :alt => "Nashville, TN", :class => "location-img") %>
 			</div>
 
 		</div>
