show uploaded images

--- a/app/views/nashville/experience.html.erb
+++ b/app/views/nashville/experience.html.erb
@@ -11,8 +11,8 @@
 			</div>
 
 			<div class="col-xs-12 col-md-6">
-				<%# image_tag(@store.the_experience_image, :alt => "Nashville, TN", :class => "experience-img") %>
-				<%= image_tag("nashville_experience.png", :alt => "Nashville, TN", :class => "location-img") %>
+				<%= image_tag(@store.the_experience_image, :alt => "Nashville, TN", :class => "experience-img") %>
+				<%# image_tag("nashville_experience.png", :alt => "Nashville, TN", :class => "location-img") %>
 			</div>
 
 		</div>
@@ -24,7 +24,7 @@
 				<p class="trousseau">Trous·seau: the clothes, household linen, and other belongings collected by a bride for her marriage.</p>
 			</div>
 		</div>
-	</div>
+	</div%>
 
 	<div class="row">
 		<div class="col-xs-12">
