--- a/app/views/tupelo/experience.html.erb
+++ b/app/views/tupelo/experience.html.erb
@@ -11,8 +11,8 @@
 			</div>
 
 			<div class="col-xs-12 col-md-6">
-				<%# image_tag(@store.the_experience_image, :alt => "Tupelo, MS", :class => "experience-img") %>
-				<%= image_tag("tupelo_experience.png", :alt => "Tupelo, MS", :class => "location-img") %>
+				<%= image_tag(@store.the_experience_image, :alt => "Tupelo, MS", :class => "experience-img") %>
+				<%# image_tag("tupelo_experience.png", :alt => "Tupelo, MS", :class => "location-img") %>
 			</div>
 
 		</div>
