--- a/app/views/tupelo/index.html.erb
+++ b/app/views/tupelo/index.html.erb
@@ -5,8 +5,8 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="col-xs-12 col-md-6">
-				<%# image_tag(@store.shop_image, :alt => "Tupelo, MS", :class => "location-img") %>
-				<%= image_tag("tupelo_shop.png", :alt => "Tupelo, MS", :class => "location-img") %>
+				<%= image_tag(@store.shop_image, :alt => "Tupelo, MS", :class => "location-img") %>
+				<%# image_tag("tupelo_shop.png", :alt => "Tupelo, MS", :class => "location-img") %>
 			</div>
 			<div class="col-xs-12 col-md-6 location-info">
 				<h3 class="city-title"><%= @store.name %></h3>
@@ -31,8 +31,8 @@
 		<div class="col-xs-12">
 			<%= link_to(tupelo_experience_path) do %>
 				<div class="col-xs-12 col-sm-6 experience">
-						<%# image_tag(@store.the_experience_image, :alt => "Tupelo, MS", :class => "location-img") %>
-						<%= image_tag("tupelo_experience.png", :alt => "Tupelo, MS", :class => "location-img") %>
+						<%= image_tag(@store.the_experience_image, :alt => "Tupelo, MS", :class => "location-img") %>
+						<%# image_tag("tupelo_experience.png", :alt => "Tupelo, MS", :class => "location-img") %>
 					<div class="label-holder">
 						<h2>The Experience</h2>
 						<span class="arrow-a">
@@ -44,8 +44,8 @@
 
 			<%= link_to(tupelo_explore_path) do %>
 				<div class="col-xs-12 col-sm-6 dresses">
-						<%# image_tag(@store.gallery_image, :alt => "Tupelo, MS", :class => "location-img") %>
-						<%= image_tag("tupelo_gallery.png", :alt => "Tupelo, MS", :class => "location-img") %>
+						<%= image_tag(@store.gallery_image, :alt => "Tupelo, MS", :class => "location-img") %>
+						<%# image_tag("tupelo_gallery.png", :alt => "Tupelo, MS", :class => "location-img") %>
 					<div class="label-holder">
 						<h2>Explore Dresses</h2>
 						<span class="arrow-a">
