--- a/app/views/whitefish/index.html.erb
+++ b/app/views/whitefish/index.html.erb
@@ -31,8 +31,8 @@
 		<div class="col-xs-12">
 			<%= link_to(whitefish_experience_path) do %>
 				<div class="col-xs-12 col-sm-6 experience">
-					<%# image_tag(@store.the_experience_image, :alt => "Whitefish, MT", :class => "location-img") %>
-					<%= image_tag('whitefish_experience.png', :alt => "Whitefish, MT", :class => "location-img") %>
+					<%= image_tag(@store.the_experience_image, :alt => "Whitefish, MT", :class => "location-img") %>
+					<%# image_tag('whitefish_experience.png', :alt => "Whitefish, MT", :class => "location-img") %>
 
 					<div class="label-holder">
 						<h2>The Experience</h2>
@@ -45,8 +45,8 @@
 
 			<%= link_to(whitefish_explore_path) do %>
 				<div class="col-xs-12 col-sm-6 dresses">
-					<%# image_tag(@store.gallery_image, :alt => "Whitefish, MT", :class => "location-img") %>
-					<%= image_tag('whitefish_gallery.png', :alt => "Whitefish, MT", :class => "location-img") %>
+					<%= image_tag(@store.gallery_image, :alt => "Whitefish, MT", :class => "location-img") %>
+					<%# image_tag('whitefish_gallery.png', :alt => "Whitefish, MT", :class => "location-img") %>
 
 					<div class="label-holder">
 						<h2>Explore Dresses</h2>
