--- a/app/views/whitefish/index.html.erb
+++ b/app/views/whitefish/index.html.erb
@@ -6,7 +6,7 @@
 		<div class="col-xs-12">
 			<div class="col-xs-12 col-md-6">
 				<%# image_tag(@store.shop_image, :alt => "Whitefish, MT", :class => "location-img") %>
-				<%= image_tag('whitefish_shop.png', :alt => "Whitefish, MT", :class => "location-img") %>
+				<%= image_tag(@store.shop_image.url, :alt => "Whitefish, MT", :class => "location-img") %>
 			</div>
 			<div class="col-xs-12 col-md-6 location-info">
 				<h3 class="city-title"><%= @store.name %></h3>
@@ -31,7 +31,7 @@
 		<div class="col-xs-12">
 			<%= link_to(whitefish_experience_path) do %>
 				<div class="col-xs-12 col-sm-6 experience">
-					<%= image_tag(@store.the_experience_image, :alt => "Whitefish, MT", :class => "location-img") %>
+					<%= image_tag(@store.the_experience_image.url, :alt => "Whitefish, MT", :class => "location-img") %>
 					<%# image_tag('whitefish_experience.png', :alt => "Whitefish, MT", :class => "location-img") %>
 
 					<div class="label-holder">
@@ -45,7 +45,7 @@
 
 			<%= link_to(whitefish_explore_path) do %>
 				<div class="col-xs-12 col-sm-6 dresses">
-					<%= image_tag(@store.gallery_image, :alt => "Whitefish, MT", :class => "location-img") %>
+					<%= image_tag(@store.gallery_image.url, :alt => "Whitefish, MT", :class => "location-img") %>
 					<%# image_tag('whitefish_gallery.png', :alt => "Whitefish, MT", :class => "location-img") %>
 
 					<div class="label-holder">
