--- a/app/views/tupelo/explore.html.erb
+++ b/app/views/tupelo/explore.html.erb
@@ -9,8 +9,8 @@
 			<a href="http://www.jlmcouture.com" target="_blank" class="designer">Blush by Hayley Paige</a> 
 			<a href="http://www.jlmcouture.com" target="_blank" class="designer">Alvina Valenta</a> 
 			<a href="http://www.theiacouture.com" target="_blank" class="designer">Theia</a> 
-			<a href="http://www.sarahseven.com" target="_blank" class="designer">Sarah Seven</a> 
-			<a href="http://www.sarahseven.com" target="_blank" class="designer">Sarah Seven Bride</a> 
+<!-- 			<a href="http://www.sarahseven.com" target="_blank" class="designer">Sarah Seven</a> 
+			<a href="http://www.sarahseven.com" target="_blank" class="designer">Sarah Seven Bride</a>  -->
 			<a href="http://www.sarehnouri.com" target="_blank" class="designer">Sareh Nouri</a> 
 			<a href="http://www.jennyyoo.com " target="_blank" class="designer">Jenny Yoo</a> 
 
