--- a/app/views/whitefish/explore.html.erb
+++ b/app/views/whitefish/explore.html.erb
@@ -13,8 +13,8 @@
 			<a href="http://www.jlmcouture.com/Alvina-Valenta/Bridal" target="_blank" class="designer">Alvina Valenta</a> 
 			<a href="http://www.jlmcouture.com/Blush-Hayley-Paige/Bridal" target="_blank" class="designer">Blush by Hayley Paige</a> 
 			<a href="http://theiacouture.com/collections/bridal/lookbook" target="_blank" class="designer">Theia</a> 
-			<a href="http://www.sarahseven.com" target="_blank" class="designer">Sarah Seven</a> 
-
+<!-- 			<a href="http://www.sarahseven.com" target="_blank" class="designer">Sarah Seven</a> 
+ -->
 			<p class="coming-soon">Full gallery coming soon!</p>
 
 		</div>
