--- a/app/views/whitefish/contact.html.erb
+++ b/app/views/whitefish/contact.html.erb
@@ -11,11 +11,13 @@
       </div>
 			<%= bootstrap_form_for Contact.new, layout: :horizontal, label_col: "col-xs-3", control_col: "col-xs-9" do |f| %>
         <%= f.text_field :name, :required => true, label_class: "label" %>
-        <%= f.text_field :email, :required => true, label_class: "label" %>
+        <%= f.text_field :senderemail, :required => true, label_class: "label", label: "email" %>
         <%= f.text_area :message, :as => :text, :required => true, label_class: "label" %>
         <div class= "hidden">
           <%= f.text_field :nickname, :hint => 'Leave this field blank!' %>
-          <%= f.text_field :recipient, :value => 'rachelle@willowbride.com' %>
+          <%# f.text_field :recipient, :value => 'rachelle@willowbride.com' %>
+          <%= f.text_field :recipient, :value => 'heather.allaman@gmail.com' %>
+
         </div>
         <div class="col-xs-9 pull-right submit-holder">
           <%= f.submit "SEND", :class => 'btn submit' %>
