--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -126,6 +126,11 @@ p {
 	margin: 4em 0 0 0;
 }
 
+.no-padding {
+	padding-left: 0px;
+	padding-right: 0px;
+}
+
 .btn {
 	text-transform: uppercase;
 	font-family: $sans-font;
@@ -366,6 +371,9 @@ a.city-title:hover {
 		text-align: center;
 		padding: .5em 0;
 		font-family: $sans-font;
+		letter-spacing: $h1-letter-sp;
+		height: 60px;
+		font-size: .85em;
 	}
 
 	.coming-soon {
@@ -374,6 +382,39 @@ a.city-title:hover {
 		text-align: center; 
 		padding: 6em 0 0 0;
 		font-size: 1em;
+	}
+
+	.designer-img {
+		margin: 30px 0;
+		display: inline-block;
+	}
+
+	.col-xs-12.col-sm-4 {
+		padding-right: 0px !important;
+	}
+}
+
+.designer-detail {
+	h4 {
+		text-transform: uppercase;
+		font-family: $sans-font;
+		letter-spacing: $h1-letter-sp;
+		font-size: .75em;
+		color: $blackish !important;
+	}
+
+	.dress-img {
+		margin: 30px 0;
+		display: inline-block;
+	}
+
+	.col-xs-12.col-sm-4 {
+		padding-right: 0px !important;
+	}
+
+	.designer-desc {
+		padding: 2em 0 0;
+		font-family: $serif-font;
 	}
 }
 
@@ -405,7 +446,7 @@ a.city-title:hover {
 		text-transform: uppercase;
 		letter-spacing: .1em;
 		font-family: $sans-font;
-		font-size: .75em;
+		font-size: .8em;
 	}
 
 	p {
@@ -459,6 +500,7 @@ a.city-title:hover {
 
 	.city-title {
 		color: $lightgrey !important;
+		font-size: 1em;
 	}
 
 	div:first-child {
@@ -546,7 +588,18 @@ a.city-title:hover {
 	}
 }
 
+@media (min-width: 769px) {
+	.display-container {
+		padding-left: 60px !important;
+    padding-right: 60px !important;
+	}
+}
+
 @media (max-width: 768px) {
+	.display-container {
+		padding-left: 0px !important;
+    padding-right: 0px !important;
+	}
 	.row {
     margin: 2em 0;
 	}
@@ -567,7 +620,7 @@ a.city-title:hover {
 	}
 }
 
-@media (max-width: 414px) {
+@media (max-width: 767px) {
 	.col-xs-12 {
 		padding-left: 0 !important;
 		padding-right: 0 !important;
