--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -219,13 +219,6 @@ p {
 	color: $blackish !important;
 }
 
-.h3-experience {
-	font-family: $serif-font;
-	font-size: $h1-font-size;
-	letter-spacing: $h1-letter-sp;
-	color: #dae2e6;
-}
-
 a.city-title:hover {
 	text-decoration: none;
 }
@@ -337,7 +330,12 @@ a.city-title:hover {
 		align-self: center;
 	}
 
-
+	h3 {
+		font-family: $serif-font;
+		font-size: $h1-font-size;
+		letter-spacing: $h1-letter-sp;
+		color: #dae2e6;
+	}
 
 	.arrow-circle {
 			align-self: center;
