--- a/app/views/nashville/explore.html.erb
+++ b/app/views/nashville/explore.html.erb
@@ -9,6 +9,8 @@
 			<a href="http://www.jesuspeiro.com/en/" target="_blank" class="designer">Jesus Piero</a> 
 			<a href="http://www.arieltaub.com" target="_blank" class="designer">Ariel Jennifer Taub</a> 
 			<a href="http://www.madeleinefig.com" target="_blank" class="designer">Madeline Fig</a> 
+			<a href="http://www.bertabridal.com" target="_blank" class="designer">Berta Bridal</a> 
+
 
 
 			<p class="coming-soon">Full gallery coming soon!</p>
