--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -358,7 +358,7 @@ a.city-title:hover {
 	p {
 		font-family: $serif-font;
 		line-height: 2em;
-		padding: 1em 2em 0 0;
+		padding: 1em 2em 1em 0;
 		font-size: 1.15em;
 		animation: fadein 1s;
 
