--- a/app/views/nashville/experience.html.erb
+++ b/app/views/nashville/experience.html.erb
@@ -24,7 +24,7 @@
 				<p class="trousseau">Trous·seau: the clothes, household linen, and other belongings collected by a bride for her marriage.</p>
 			</div>
 		</div>
-	</div%>
+	</div>
 
 	<div class="row">
 		<div class="col-xs-12">
