setting up new dresses/designersenv

--- a/app/views/designers/edit.html.erb
+++ b/app/views/designers/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Designer</h1>
+<div class="container">
 
-<%= render 'form' %>
+	<h1>Editing Designer</h1>
 
-<%= link_to 'Show', @designer %> |
-<%= link_to 'Back', designers_path %>
+	<%= render 'form' %>
+
+	<%= link_to 'Show', @designer %> |
+	<%= link_to 'Back', designers_path %>
+
+</div>
