--- a/app/views/dresses/edit.html.erb
+++ b/app/views/dresses/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Dress</h1>
+<div class="container">
 
-<%= render 'form' %>
+	<h1>Editing Dress</h1>
 
-<%= link_to 'Show', @dress %> |
-<%= link_to 'Back', dresses_path %>
+	<%= render 'form' %>
+
+	<%= link_to 'Show', @dress %> |
+	<%= link_to 'Back', dresses_path %>
+	
+</div>
