--- a/app/views/dresses/new.html.erb
+++ b/app/views/dresses/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Dress</h1>
+<div class="container">
 
-<%= render 'form' %>
+	<h1>New Dress</h1>
 
-<%= link_to 'Back', dresses_path %>
+	<%= render 'form' %>
+
+	<%= link_to 'Back', dresses_path %>
+</div>
