--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -26,6 +26,6 @@
 
   <br>
 
-  <%= link_to 'New Store', new_store_path %>
+  <%= link_to 'New Store', new_store_path, class: 'btn btn-default' %>
   
 </div>
