--- a/app/views/whitefish/designer.html.erb
+++ b/app/views/whitefish/designer.html.erb
@@ -7,17 +7,16 @@
 			<div class="col-xs-12 display-container">
 
 				<div class="col-xs-12">
-					<h4 class="pull-left"><%= @designer %></h4>
-					<h4 class="pull-right">$2,200-$6,000</h4>
+					<h4 class="pull-left"><%= @designer.name %></h4>
+					<h4 class="pull-right"><%= @designer.price %></h4>
 				</div>
 				<div class="col-xs-12">
-					<p class="designer-desc">Claire La Foye's bridal collections emits a heavy nostalgia and days gone by, yet still sings all things sexy and unique. Re-working back thoruh fashion history, she cuts old Hollywood glamour with a modern day sillhouette that is both creative and whimsical.
-					</p>
+					<p class="designer-desc"><%= @designer.description %></p>
 				</div>
 
 			<% @dresses.each do |dress| %>
 				<div class="col-xs-12 col-sm-4">
-					<%= image_tag(@store.gallery_image.url, :alt => dress, :class => "dress-img") %>
+					<%= image_tag(dress.main_image.url, :alt => dress, :class => "dress-img") %>
  				</div>
 			<% end %>
 
