--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -20,20 +20,27 @@
     <%= f.text_area :description %>
   </div>
   <div class="field">
+    <%= f.label :price %><br>
+    <%= f.text_area :price %>
+  </div>
+    
+  <%= image_tag(@designer.main_image.url, :class => "img-thumbnail") %>
+
+  <div class="field">
     <%= f.label :main_image %><br>
-    <%= f.text_field :main_image %>
+    <%= f.file_field :main_image %>
   </div>
   <div class="field">
     <%= f.label :location1 %><br>
-    <%= f.text_field :location1 %>
+    <%= select("post", "location1", Store.all.collect {|s| [ s.name, s.id ] }, {:selected => @designer.location1, prompt: 'Select Location'}) %>
   </div>
   <div class="field">
     <%= f.label :location2 %><br>
-    <%= f.text_field :location2 %>
+    <%= select("post", "location2", Store.all.collect {|s| [ s.name, s.id ] }, {:selected => @designer.location2, prompt: 'Select Location'}) %>
   </div>
   <div class="field">
     <%= f.label :location3 %><br>
-    <%= f.text_field :location3 %>
+    <%= select("post", "location3", Store.all.collect {|s| [ s.name, s.id ] }, {:selected => @designer.location3, prompt: 'Select Location'}) %>
   </div>
   <div class="actions">
     <%= f.submit %>
