--- a/app/views/designers/index.html.erb
+++ b/app/views/designers/index.html.erb
@@ -1,37 +1,40 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
 
-<h1>Listing Designers</h1>
+  <p id="notice"><%= notice %></p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Main image</th>
-      <th>Location1</th>
-      <th>Location2</th>
-      <th>Location3</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <h1>Listing Designers</h1>
 
-  <tbody>
-    <% @designers.each do |designer| %>
+  <table class="table">
+    <thead>
       <tr>
-        <td><%= designer.name %></td>
-        <td><%= designer.description %></td>
-        <td><%= designer.main_image %></td>
-        <td><%= designer.location1 %></td>
-        <td><%= designer.location2 %></td>
-        <td><%= designer.location3 %></td>
-        <td><%= link_to 'Show', designer %></td>
-        <td><%= link_to 'Edit', edit_designer_path(designer) %></td>
-        <td><%= link_to 'Destroy', designer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Main image</th>
+        <th>Location1</th>
+        <th>Location2</th>
+        <th>Location3</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @designers.each do |designer| %>
+        <tr>
+          <td><%= designer.name %></td>
+          <td><%= designer.description %></td>
+          <td>  <%= image_tag(designer.main_image.url, :class => "img-thumbnail") %></td>
+          <td><%= designer.location1 %></td>
+          <td><%= designer.location2 %></td>
+          <td><%= designer.location3 %></td>
+          <td><%= link_to 'Show', designer %></td>
+          <td><%= link_to 'Edit', edit_designer_path(designer) %></td>
+          <td><%= link_to 'Destroy', designer, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Designer', new_designer_path %>
+  <br>
+
+  <%= link_to 'New Designer', new_designer_path, class: 'btn btn-default' %>
+</div>
