--- a/app/views/dresses/index.html.erb
+++ b/app/views/dresses/index.html.erb
@@ -1,43 +1,46 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
 
-<h1>Listing Dresses</h1>
+  <p id="notice"><%= notice %></p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Designer</th>
-      <th>Location</th>
-      <th>Main image</th>
-      <th>Price</th>
-      <th>Style</th>
-      <th>Garment type</th>
-      <th>Tag</th>
-      <th>Name</th>
-      <th>Collection</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <h1>Listing Dresses</h1>
 
-  <tbody>
-    <% @dresses.each do |dress| %>
+  <table class="table">
+    <thead>
       <tr>
-        <td><%= dress.designer_id %></td>
-        <td><%= dress.location %></td>
-        <td><%= dress.main_image %></td>
-        <td><%= dress.price %></td>
-        <td><%= dress.style %></td>
-        <td><%= dress.garment_type %></td>
-        <td><%= dress.tag %></td>
-        <td><%= dress.name %></td>
-        <td><%= dress.collection %></td>
-        <td><%= link_to 'Show', dress %></td>
-        <td><%= link_to 'Edit', edit_dress_path(dress) %></td>
-        <td><%= link_to 'Destroy', dress, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Designer</th>
+        <th>Location</th>
+        <th>Main image</th>
+        <th>Price</th>
+        <th>Style</th>
+        <th>Garment type</th>
+        <th>Tag</th>
+        <th>Name</th>
+        <th>Collection</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @dresses.each do |dress| %>
+        <tr>
+          <td><%= dress.designer_id %></td>
+          <td><%= dress.location %></td>
+          <td><%= image_tag(dress.main_image.url, :class => "img-thumbnail") %></td>
+          <td><%= dress.price %></td>
+          <td><%= dress.style %></td>
+          <td><%= dress.garment_type %></td>
+          <td><%= dress.tag %></td>
+          <td><%= dress.name %></td>
+          <td><%= dress.collection %></td>
+          <td><%= link_to 'Show', dress %></td>
+          <td><%= link_to 'Edit', edit_dress_path(dress) %></td>
+          <td><%= link_to 'Destroy', dress, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Dress', new_dress_path %>
+  <br>
+
+  <%= link_to 'New Dress', new_dress_path, class: 'btn btn-default' %>
+</div>
