--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -102,7 +102,6 @@ body {
 img {
 	width: 100%;
 	height: auto;
-	animation: fadein 1s;
 }
 
 a, a:hover, a:visited, a:focus {
@@ -411,8 +410,10 @@ a.city-title:hover {
 	}
 
 	.dress-img {
-		margin: 30px 0;
+		margin: 0;
 		display: inline-block;
+		width: initial;
+		max-width: 100%;
 	}
 
 	.col-xs-12.col-sm-4 {
@@ -422,6 +423,16 @@ a.city-title:hover {
 	.designer-desc {
 		padding: 2em 0 0;
 		font-family: $serif-font;
+	}
+
+	.left-col {
+		text-align: right;
+		padding: 7px !important;
+	}
+
+	.right-col {
+		text-align: left;
+		padding: 7px !important;
 	}
 }
 
@@ -655,6 +666,10 @@ a.city-title:hover {
 		.menu img {
 			max-width: 35px;
 		}
+	}
+
+	.dress-img {
+		width: 100% !important;
 	}
 }
 
