--- a/app/views/whitefish/designer.html.erb
+++ b/app/views/whitefish/designer.html.erb
@@ -14,11 +14,19 @@
 					<p class="designer-desc"><%= @designer.description %></p>
 				</div>
 
-			<% @dresses.each do |dress| %>
-				<div class="col-xs-12 col-sm-4">
-					<%= image_tag(dress.main_image.url, :alt => dress, :class => "dress-img") %>
- 				</div>
-			<% end %>
+				<div style="height: 30px; width: 100%; clear: both;"></div>
+
+				<% @dresses.each_with_index do |dress, index| %>
+
+				<% if(index + 1) % 2 === 0 %>
+					<div class="col-xs-12 col-sm-6 pull-left left-col reveal">
+				<% else %>
+					<div class="col-xs-12 col-sm-6 pull-right right-col reveal">
+				<% end
+				%>
+						<%= image_tag(dress.main_image.url, :alt => dress, :class => "dress-img") %>
+	 				</div>
+				<% end %>
 
 					
 		</div>
