--- a/app/views/whitefish/explore.html.erb
+++ b/app/views/whitefish/explore.html.erb
@@ -5,7 +5,7 @@
 	<div class="row no-bottom">
 		<div class="col-xs-12 designers">
 			<div class="col-xs-12 display-container">
-					<!-- <a href="http://www.jennyyoo.com" target="_blank" class="designer">Jenny Yoo</a> 
+					<a href="http://www.jennyyoo.com" target="_blank" class="designer">Jenny Yoo</a> 
 					<a href="http://www.jennyyoo.com" target="_blank" class="designer">Jenny Yoo Bridesmaids</a> 
 					<a href="http://www.clairelafaye.com" target="_blank" class="designer">Claire La Faye</a> 
 					<a href="http://clairepettibone.com" target="_blank" class="designer">Claire Pettibone Couture</a> 
@@ -14,7 +14,6 @@
 					<a href="http://www.jlmcouture.com/Alvina-Valenta/Bridal" target="_blank" class="designer">Alvina Valenta</a> 
 					<a href="http://www.jlmcouture.com/Blush-Hayley-Paige/Bridal" target="_blank" class="designer">Blush by Hayley Paige</a> 
 					<a href="http://theiacouture.com/collections/bridal/lookbook" target="_blank" class="designer">Theia</a> 
-					<p class="coming-soon">Full gallery coming soon!</p> -->
 
 					<!-- New Location Gallery below -->
 					<% @designers.each do |designer| %>
