--- a/app/views/nashville/explore.html.erb
+++ b/app/views/nashville/explore.html.erb
@@ -13,7 +13,14 @@
 
 
 
-			<p class="coming-soon">Full gallery coming soon!</p>
+			<!-- New Location Gallery below -->
+			<% @designers.each do |designer| %>
+				<div class="col-xs-12 col-sm-4">
+					<%= link_to image_tag(designer.main_image.url, :alt => designer.name, :class => "designer-img"), nashville_designers_name_path(@designer, :name => designer.name.gsub(' ', '_' )), :class => 'designer-main' %>
+					<%= link_to designer.name, nashville_designers_name_path(@designer, :name => designer.name.gsub(' ', '_' )), :class => 'designer' %>
+ 				</div>
+			<% end %>
+			<!-- end -->
 
 
 		</div>
