--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -32,15 +32,15 @@
   </div>
   <div class="field">
     <%= f.label :location1 %><br>
-    <%= select("post", "location1", Store.all.collect {|s| [ s.name, s.id ] }, {:selected => @designer.location1, prompt: 'Select Location'}) %>
+    <%= f.select :location1, options_for_select(Store.all.collect {|s| [ s.name ] }, {:selected => @designer.location1, prompt: 'Select Location'}) %>
   </div>
   <div class="field">
     <%= f.label :location2 %><br>
-    <%= select("post", "location2", Store.all.collect {|s| [ s.name, s.id ] }, {:selected => @designer.location2, prompt: 'Select Location'}) %>
+    <%= f.select :location2, options_for_select(Store.all.collect {|s| [ s.name ] }, {:selected => @designer.location2, prompt: 'Select Location'}) %>
   </div>
   <div class="field">
     <%= f.label :location3 %><br>
-    <%= select("post", "location3", Store.all.collect {|s| [ s.name, s.id ] }, {:selected => @designer.location3, prompt: 'Select Location'}) %>
+    <%= f.select :location3, options_for_select(Store.all.collect {|s| [ s.name ] }, {:selected => @designer.location3, prompt: 'Select Location'}) %>
   </div>
   <div class="actions">
     <%= f.submit %>
