--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -333,7 +333,7 @@ a.city-title:hover {
 		font-family: $serif-font;
 		font-size: $h1-font-size;
 		letter-spacing: $h1-letter-sp;
-		color: #dae2e6;
+		color: $gold;
 	}
 
 	.arrow-circle {
