--- a/app/views/dress_images/edit.html.erb
+++ b/app/views/dress_images/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Dress Image</h1>
+<div class="container">
+	<h1>Editing Dress Image</h1>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @dress_image %> |
-<%= link_to 'Back', dress_images_path %>
+	<%= link_to 'Show', @dress_image %> |
+	<%= link_to 'Back', dress_images_path %>
+</div>
