--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -390,6 +390,13 @@ a.city-title:hover {
 		font-size: 1em;
 	}
 
+	a.designer-main {
+		display: inline-block;
+    max-height: 222px;
+    max-width: 222px;
+    overflow: hidden;
+	}
+
 	.designer-img {
 		margin: 30px 0;
 		display: inline-block;
