--- a/app/views/nashville/designer.html.erb
+++ b/app/views/nashville/designer.html.erb
@@ -23,15 +23,35 @@
 				<% else %>
 					<div class="col-xs-12 col-sm-6 pull-right right-col reveal">
 				<% end
-				%>
-						<%= image_tag(dress.main_image.url, :alt => dress, :class => "dress-img") %>
+				%>	
+						<div class="dress_contain">
+							<%= image_tag(dress.main_image.url, :alt => dress, :class => "dress-img") %>
+							<span class="dress_name"><%= dress.name %></span>
+						</div>
 	 				</div>
+
+
+	 				<% DressImage.where(dress_id: dress).limit(4).each_with_index do |additional_img, ad_index| %>
+
+	 					<% if (((index + 1) % 2) + ((ad_index + 1) % 2))=== 0 %>
+							<div class="col-xs-12 col-sm-6 pull-left left-col reveal">
+						<% else %>
+							<div class="col-xs-12 col-sm-6 pull-right right-col reveal">
+						<% end
+						%>
+						<div class="dress_contain">
+							<%= image_tag(additional_img.image.url, :alt => dress, :class => "dress-img") %>
+							<span class="dress_name"><%= dress.name %></span>
+						</div>
+						</div>
+					<% end %>
 				<% end %>
 
 			</div>		
 		</div>
 	</div>
 </div>
+
 
 <%= render partial: "nashville_footer" %>
 
