--- a/app/views/designers/index.html.erb
+++ b/app/views/designers/index.html.erb
@@ -22,7 +22,7 @@
         <tr>
           <td><%= designer.name %></td>
           <td><%= designer.description %></td>
-          <td>  <%= image_tag(designer.main_image.url, :class => "img-thumbnail") %></td>
+          <td>  <%= image_tag(designer.main_image.url(:thumb), :class => "img-thumbnail") %></td>
           <td><%= designer.location1 %></td>
           <td><%= designer.location2 %></td>
           <td><%= designer.location3 %></td>
