--- a/app/views/designers/show.html.erb
+++ b/app/views/designers/show.html.erb
@@ -18,7 +18,7 @@
   </p>
   <p>
     <strong>Main image:</strong>
-    <%= image_tag(@designer.main_image.url, :class => "img-thumbnail") %>
+    <%= image_tag(@designer.main_image.url(:thumb), :class => "img-thumbnail") %>
   </p>
 
   <p>
