--- a/app/views/dress_images/index.html.erb
+++ b/app/views/dress_images/index.html.erb
@@ -16,7 +16,7 @@
       <% @dress_images.each do |dress_image| %>
         <tr>
           <td><%= Dress.find_by_id(dress_image.dress_id).name %></td>
-          <td><%= image_tag(dress_image.image.url, :class => "img-thumbnail") %></td>
+          <td><%= image_tag(dress_image.image.url(:thumb), :class => "img-thumbnail") %></td>
           <td><%= link_to 'Show', dress_image %></td>
           <td><%= link_to 'Edit', edit_dress_image_path(dress_image) %></td>
           <td><%= link_to 'Destroy', dress_image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
