--- a/app/views/dresses/index.html.erb
+++ b/app/views/dresses/index.html.erb
@@ -9,6 +9,7 @@
       <tr>
         <th>Designer</th>
         <th>Location</th>
+        <th>Main image</th>
         <th>Price</th>
         <th>Style</th>
         <th>Garment type</th>
@@ -24,6 +25,7 @@
         <tr>
           <td><%= Designer.find_by_id(dress.designer_id).name  %></td>
           <td><%= dress.location %></td>
+          <td><%= image_tag(dress.main_image.url(:thumb), :class => "img-thumbnail") %></td>
           <td><%= dress.price %></td>
           <td><%= dress.style %></td>
           <td><%= dress.garment_type %></td>
