--- a/app/views/tupelo/test.html.erb
+++ b/app/views/tupelo/test.html.erb
@@ -9,7 +9,7 @@
 					<!-- New Location Gallery below -->
 					<% @designers.each do |designer| %>
 						<div class="col-xs-12 col-sm-4">
-							<%= link_to image_tag(designer.main_image.url, :alt => designer.name, :class => "designer-img"), tupelo_designers_name_path(@designer, :name => designer.name.gsub(' ', '_' )), :class => 'designer-main' %>
+							<%= link_to image_tag(designer.main_image.url(:display), :alt => designer.name, :class => "designer-img"), tupelo_designers_name_path(@designer, :name => designer.name.gsub(' ', '_' )), :class => 'designer-main' %>
 							<%= link_to designer.name, tupelo_designers_name_path(@designer, :name => designer.name.gsub(' ', '_' )), :class => 'designer' %>
 		 				</div>
 					<% end %>
