--- a/app/views/dresses/show.html.erb
+++ b/app/views/dresses/show.html.erb
@@ -14,7 +14,7 @@
 
   <p>
     <strong>Main image:</strong>
-    <%= image_tag(@dress.main_image.url, :class => "img-thumbnail") %>
+    <%= image_tag(@dress.main_image.url(:thumb), :class => "img-thumbnail") %>
   </p>
 
   <p>
