--- a/app/views/whitefish/designer.html.erb
+++ b/app/views/whitefish/designer.html.erb
@@ -15,10 +15,10 @@
 				</div>
 
 				<div style="height: 30px; width: 100%; clear: both;"></div>
-				<% @last = '' %>
+				<% @last = 'right' %>
 				<% @dresses.each_with_index do |dress, index| %>
 
-				<% if(index + 1) % 2 === 0 %>
+				<% if @last == 'left' %>
 					<% @last = 'right' %>
 					<div class="col-xs-12 col-sm-6 pull-right right-col reveal">
 				<% else %>
