--- a/app/views/dresses/_form.html.erb
+++ b/app/views/dresses/_form.html.erb
@@ -13,9 +13,11 @@
 
   <div class="field">
     <%= f.label :designer_id %><br>
-    <%= 
+    <%
       @dress_id = @dress.designer ? @dress.designer.id : ''
-      f.select :designer_id, options_for_select(Designer.all.collect {|s| [ s.name, s.id ] }, {:selected => @dress_id, prompt: 'Select Designer'}) %>
+      @designer_collection = Designer.all.collect {|s| [ s.name, s.id ] }
+    %>
+    <%=  f.select :designer_id, options_for_select(@designer_collection.reverse, {:selected => @dress_id, prompt: 'Select Designer'}) %>
   </div>
   <div class="field">
     <%= f.label :location %><br>
