--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -447,11 +447,13 @@ a.city-title:hover {
 	.left-col {
 		text-align: right;
 		padding: 7px !important;
+		clear: both;
 	}
 
 	.right-col {
 		text-align: left;
 		padding: 7px !important;
+		clear: both;
 	}
 
 
