--- a/app/views/tupelo/designer.html.erb
+++ b/app/views/tupelo/designer.html.erb
@@ -35,11 +35,11 @@
 					<% @dresses_left.each_with_index do |dress, index| %>
 
 						<% 
-							if defined?(dress.image)
-								@dress_img = dress.image.url(:display) 
-							else 
-								@dress_img = dress.main_image.url(:display) 
-							end
+							# if defined?(dress.image)
+							# 	@dress_img = dress.image.url(:display) 
+							# else 
+							# 	@dress_img = dress.main_image.url(:display) 
+							# end
 
 							if defined?(dress.name)
 								@dress_name = dress.name 
@@ -59,11 +59,11 @@
 					<% @dresses_right.each_with_index do |dress, index| %>
 
 						<% 
-							if defined?(dress.image)
-								@dress_img = dress.image.url(:display) 
-							else 
-								@dress_img = dress.main_image.url(:display) 
-							end
+							# if defined?(dress.image)
+							# 	@dress_img = dress.image.url(:display) 
+							# else 
+							# 	@dress_img = dress.main_image.url(:display) 
+							# end
 
 							if defined?(dress.name)
 								@dress_name = dress.name
